--- a/user/om_73/range rover/expanded.html
+++ b/user/om_73/range rover/expanded.html
@@ -3,254 +3,13 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!-- <link rel="stylesheet" href="dark mode/dark-mode.css">
-<link rel="icon" href="favicon/ruby (1).png" type="image/x-icon">
-<link rel="stylesheet" href="mdb/css/global.min.css">
-<link rel="stylesheet" href="CSS/Timestamps.css">
-<link rel="stylesheet" href="mdb/css/mdb.min.css">
-<link rel="stylesheet" href="mdb/css/style.css">
-<link rel="stylesheet" href="css/room.css">
-<link rel="stylesheet" href="design/css/mdb.min.css">
-<link href="rubyproducti9n pro/css/bootstrap.min.css" rel="stylesheet">
-<link href="rubyproducti9n pro/css/mdb.min.css" rel="stylesheet">
-<link rel="stylesheet" href="../js/dark-mode.css">
-<link rel="stylesheet" href="design/css/mdb.min.css">
-<script src="JS/time ago.js" type="text/javascript"></script>
-<script src="timeago/jquery.timeago.js" type="text/javascript"></script>
-<script src="timeago/jquery.min.js" type="text/javascript"></script>
-<script src="test/test_helpers.js" type="text/javascript"></script>
-<script src="jquery.timeago.js" type="text/javascript"></script>
-<script src="timeago/jquery.timeago.js" type="text/javascript"></script>
-<script src="timeago/test/test_helpers.js" type="text/javascript"></script>
-<link rel="icon" href="favicon/favicon.png" sizes="16x16 32x32" type="image/png">
-<link rel="stylesheet" href="CSS/RUBY PRODUCTION.css">
-<link rel="stylesheet" href="dark mode/dark-mode.css">
-<link rel="icon" href="favicon/ruby (1).png" type="image/x-icon">
-<link rel="stylesheet" href="mdb/css/global.min.css">
-<link rel="stylesheet" href="CSS/Timestamps.css">
-<link rel="stylesheet" href="mdb/css/mdb.min.css">
-<link rel="stylesheet" href="mdb/css/style.css">
-<link rel="stylesheet" href="css/room.css">
-<link rel="stylesheet" href="design/css/mdb.min.css">
-<link href="rubyproducti9n pro/css/bootstrap.min.css" rel="stylesheet">
-<link href="rubyproducti9n pro/css/mdb.min.css" rel="stylesheet">
-<link rel="stylesheet" href="../js/dark-mode.css">
-<link rel="stylesheet" href="design/css/mdb.min.css">
-<script src="JS/time ago.js" type="text/javascript"></script>
-<script src="timeago/jquery.timeago.js" type="text/javascript"></script>
-<script src="timeago/jquery.min.js" type="text/javascript"></script>
-<script src="test/test_helpers.js" type="text/javascript"></script>
-<script src="jquery.timeago.js" type="text/javascript"></script>
-<script src="timeago/jquery.timeago.js" type="text/javascript"></script>
-<script src="timeago/test/test_helpers.js" type="text/javascript"></script>
-<link rel="icon" href="favicon/favicon.png" sizes="16x16 32x32" type="image/png">
-<link rel="stylesheet" href="CSS/RUBY PRODUCTION.css"> -->
 <link rel="stylesheet" href="css/global.css">
 <link rel="icon" href="img/favicon.png" sizes="16x16 32x32" type="image/png">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
 <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <title>Jaguar Land Rover Range Rover - Expanded Models</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Cinzel&family=Comfortaa:wght@700&family=Jost&display=swap');
-            @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Jost&family=Whisper&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Arimo:ital@1&family=Comfortaa:wght@700&family=Raleway:wght@800&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Raleway:wght@200&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Josefin+Sans&family=Raleway:wght@800&display=swap');
-        body{
-            color: var(--black);
-            background: var(--white);
-            user-select: none;
-        }
-        center h1{
-            color: #e0b68c;
-            font-family: 'Cinzel', serif;
-            letter-spacing: 2px;
-        text-shadow: 0 0 10px rgba(255, 0, 0, 0);
-        /* font-style: italic; */
-        padding: 10px 20px;
-        border-bottom: 2px rgba(214, 214, 214, 0) solid;
-        font-size: 40px;
-        margin: 15%;
-        height: 30vh;
-    }
-        .exp-container{
-            display: inline-block;
-            border: 2px rgba(211, 211, 211, 0.247) solid;
-            border-radius: 6px;
-            margin: 10px 10px;
-            width: 48%;
-        }
-        .exp-container h1{
-            color: var(--richColor);
-            font-size: 20px;
-        font-family: 'Cinzel', serif;
-        letter-spacing: 2px;
-        }
-        .exp-img{
-            width: 100%;
-        }
-        .exp-details{
-            font-family: 'Jost', sans-serif;
-            line-height: 23px;
-            padding: 10px 20px;
-        }
-        .exp-sec{
-            display: inline-block;
-            width: 47%;
-            border: 2px rgba(0, 0, 0, 0) solid;
-        }
-        .key-feat{
-            padding: 5px 10px;
-            margin: 0px 10px;
-            border-bottom: 2px rgb(211, 211, 211) solid;
-        }
-        .ic-check{
-            transform: rotate(-3deg);
-            color: rgb(0, 208, 59);
-        }
-        .ic-rate{
-            transform: rotate(-3deg);
-            color: rgb(255, 196, 0);
-        }
-        .price-tg{
-            padding-top: 40px;
-        }
-        .price-tg h2{
-            font-weight: normal;
-            font-style: normal;
-            font-display: normal;
-        }
-        .options{
-            padding: 0 10px;
-            margin: 10px 0;
-            border: 2px rgba(0, 0, 0, 0) solid;
-        }
-        .mech-btn{
-            display: inline-block;
-            padding: 10px 20px;
-            margin: 0 10px;
-            border-radius: 0px;
-            font-size: 10px;
-            font-weight: 400;
-            font-family: 'Cinzel', serif;
-            letter-spacing: 1px;
-            color: #fff;
-            border: 2px var(--transparent) solid;
-            background: var(--richColor);
-            text-decoration: none;
-            cursor: pointer;
-            transition: all 0.1s ease;
-        }
-        .mech-btn:hover{
-            color: var(--richColor);
-            border: 2px var(--richColor) solid;
-            background: #efc39700;
-        }
-        .divider{
-            margin: 0 10px;
-            margin-top: 80px;
-            padding: 1px 20px;
-            color: var(--white);
-            background: var(--richColor);
-            font-family: 'Cinzel', serif;
-            letter-spacing: 2px;
-        }
-        .sm-info{
-            color: var(--black);
-            text-decoration: none;
-        }
-        .sm-info:hover{
-            color: var(--black);
-            text-decoration: underline;
-        }
-        @media screen and (max-width: 768px) {
-            center h1{
-                color: #e0b68c;
-                font-family: 'Cinzel', serif;
-                letter-spacing: 2px;
-            text-shadow: 0 0 10px rgba(255, 0, 0, 0);
-            /* font-style: italic; */
-            padding: 10px 20px;
-            border-bottom: 2px rgba(214, 214, 214, 0) solid;
-            font-size: 40px;
-            margin: 15%;
-            height: 30vh;
-        }
-            .exp-container{
-                display: inline-block;
-                border: 2px rgb(211, 211, 211) solid;
-                border-radius: 6px;
-                margin: 20px 0px;
-                width: 98%;
-            }
-            .exp-container h1{
-                color: var(--richColor);
-                font-size: 18px;
-            font-family: 'Cinzel', serif;
-            letter-spacing: 2px;
-            }
-            .exp-img{
-                width: 100%;
-            }
-            .exp-details{
-                font-size: 10px;
-                font-family: 'Jost', sans-serif;
-                line-height: 23px;
-                padding: 10px 10px;
-            }
-            .exp-sec{
-                display: inline-block;
-                width: 47%;
-                border: 2px rgba(0, 0, 0, 0) solid;
-            }
-            .key-feat{
-                padding: 5px 10px;
-                margin: 0px 10px;
-                border-bottom: 2px rgb(211, 211, 211) solid;
-            }
-            .ic-check{
-                transform: rotate(-3deg);
-                color: rgb(0, 208, 59);
-            }
-            .ic-rate{
-                transform: rotate(-3deg);
-                color: rgb(255, 196, 0);
-            }
-            .price-tg{
-                padding-top: 40px;
-            }
-            .price-tg h2{
-                font-weight: normal;
-                font-style: normal;
-                font-display: normal;
-            }
-            .options{
-                padding: 0 10px;
-                margin: 10px 0;
-                border: 2px rgba(0, 0, 0, 0) solid;
-            }
-            .mech-btn{
-                display: inline-block;
-                padding: 10px 20px;
-                margin: 0 10px;
-                border-radius: 0px;
-                font-size: 8px;
-                font-weight: 400;
-                font-family: 'Cinzel', serif;
-                letter-spacing: 1px;
-                color: #fff;
-                border: 2px var(--transparent) solid;
-                background: var(--richColor);
-                text-decoration: none;
-                cursor: pointer;
-                transition: all 0.1s ease;
-            }
-            .mech-btn:hover{
-                color: var(--richColor);
-                border: 2px var(--richColor) solid;
-                background: #efc39700;
-            }
-        }
+       @import url('https://fonts.googleapis.com/css2?family=Cinzel&family=Comfortaa:wght@700&family=Jost&display=swap');@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Jost&family=Whisper&display=swap');@import url('https://fonts.googleapis.com/css2?family=Arimo:ital@1&family=Comfortaa:wght@700&family=Raleway:wght@800&display=swap');@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Raleway:wght@200&display=swap');@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Josefin+Sans&family=Raleway:wght@800&display=swap');body{color:var(--black);background:var(--white);user-select:none}center h1{color:#e0b68c;font-family:'Cinzel',serif;letter-spacing:2px;text-shadow:0 0 10px rgba(255,0,0,0);padding:10px 20px;border-bottom:2px rgba(214,214,214,0) solid;font-size:40px;margin:15%;height:30vh}.exp-container{display:inline-block;border:2px rgba(211,211,211,0.247) solid;border-radius:6px;margin:10px 10px;width:48%}.exp-container h1{color:var(--richColor);font-size:20px;font-family:'Cinzel',serif;letter-spacing:2px}.exp-img{width:100%}.exp-details{font-family:'Jost',sans-serif;line-height:23px;padding:10px 20px}.exp-sec{display:inline-block;width:47%;border:2px rgba(0,0,0,0) solid}.key-feat{padding:5px 10px;margin:0px 10px;border-bottom:2px rgb(211,211,211) solid}.ic-check{transform:rotate(-3deg);color:rgb(0,208,59)}.ic-rate{transform:rotate(-3deg);color:rgb(255,196,0)}.price-tg{padding-top:40px}.price-tg h2{font-weight:normal;font-style:normal;font-display:normal}.options{padding:0 10px;margin:10px 0;border:2px rgba(0,0,0,0) solid}.mech-btn{display:inline-block;padding:10px 20px;margin:0 10px;border-radius:0px;font-size:10px;font-weight:400;font-family:'Cinzel',serif;letter-spacing:1px;color:#fff;border:2px var(--transparent) solid;background:var(--richColor);text-decoration:none;cursor:pointer;transition:all 0.1s ease}.mech-btn:hover{color:var(--richColor);border:2px var(--richColor) solid;background:#efc39700}.divider{margin:0 10px;margin-top:80px;padding:1px 20px;color:var(--white);background:var(--richColor);font-family:'Cinzel',serif;letter-spacing:2px}.sm-info{color:var(--black);text-decoration:none}.sm-info:hover{color:var(--black);text-decoration:underline}@media screen and(max-width:768px){center h1{color:#e0b68c;font-family:'Cinzel',serif;letter-spacing:2px;text-shadow:0 0 10px rgba(255,0,0,0);padding:10px 20px;border-bottom:2px rgba(214,214,214,0) solid;font-size:40px;margin:15%;height:30vh}.exp-container{display:inline-block;border:2px rgb(211,211,211) solid;border-radius:6px;margin:20px 0px;width:98%}.exp-container h1{color:var(--richColor);font-size:18px;font-family:'Cinzel',serif;letter-spacing:2px}.exp-img{width:100%}.exp-details{font-size:10px;font-family:'Jost',sans-serif;line-height:23px;padding:10px 10px}.exp-sec{display:inline-block;width:47%;border:2px rgba(0,0,0,0) solid}.key-feat{padding:5px 10px;margin:0px 10px;border-bottom:2px rgb(211,211,211) solid}.ic-check{transform:rotate(-3deg);color:rgb(0,208,59)}.ic-rate{transform:rotate(-3deg);color:rgb(255,196,0)}.price-tg{padding-top:40px}.price-tg h2{font-weight:normal;font-style:normal;font-display:normal}.options{padding:0 10px;margin:10px 0;border:2px rgba(0,0,0,0) solid}.mech-btn{display:inline-block;padding:10px 20px;margin:0 10px;border-radius:0px;font-size:8px;font-weight:400;font-family:'Cinzel',serif;letter-spacing:1px;color:#fff;border:2px var(--transparent) solid;background:var(--richColor);text-decoration:none;cursor:pointer;transition:all 0.1s ease}.mech-btn:hover{color:var(--richColor);border:2px var(--richColor) solid;background:#efc39700}}
     </style>
 </head>
 <body>
@@ -297,7 +56,7 @@
             <span class="key-feat">Driver Air Bag <i class="fa fa-check-circle ic-check"></i> </span>
             <span class="key-feat">Passenger Airbag <i class="fa fa-check-circle ic-check"></i> </span><br>
             <div class="price-tg">
-            <h2>Price: Rs.69.99 Lakh*</h2>
+                <h2>Price: Rs.69.99 Lakh*</h2>
             </div>
         </div>
         <div class="options">
@@ -320,7 +79,7 @@
                 <h4>Engine and Transmission</h4>
                 • Transmission Type: Automatic<br>
                 • Engine: Petrol Engine <br>
-                • Engine Type: <a class="sm-info" href="#TD4Engine">  TD4 Engine </a><br>
+                • Engine Type: <a class="sm-info" href="#TD4Engine"> TD4 Engine </a><br>
                 • Gear Box: 8 Automatic Transmission<br>
             </div>
             <div class="exp-sec">
@@ -341,7 +100,7 @@
             <span class="key-feat">Driver Air Bag <i class="fa fa-check-circle ic-check"></i> </span>
             <span class="key-feat">Passenger Airbag <i class="fa fa-check-circle ic-check"></i> </span><br>
             <div class="price-tg">
-            <h2>Price: Rs.86.75 - 86.81 Lakh*</h2>
+                <h2>Price: Rs.86.75 - 86.81 Lakh*</h2>
             </div>
         </div>
         <div class="options">
@@ -383,7 +142,7 @@
             <span class="key-feat">Driver Air Bag <i class="fa fa-check-circle ic-check"></i> </span>
             <span class="key-feat">Passenger Airbag <i class="fa fa-check-circle ic-check"></i> </span><br>
             <div class="price-tg">
-            <h2>Price: Rs.80.72 Lakh - 1.22 Cr* </h2>
+                <h2>Price: Rs.80.72 Lakh - 1.22 Cr* </h2>
             </div>
         </div>
         <div class="options">
@@ -426,7 +185,7 @@
             <span class="key-feat">Driver Air Bag <i class="fa fa-check-circle ic-check"></i> </span>
             <span class="key-feat">Passenger Airbag <i class="fa fa-check-circle ic-check"></i> </span><br>
             <div class="price-tg">
-            <h2>Price: Rs.91.27 Lakh - 2.19 Cr*</h2>
+                <h2>Price: Rs.91.27 Lakh - 2.19 Cr*</h2>
             </div>
         </div>
         <div class="options">
@@ -454,7 +213,7 @@
                 <h4>Engine and Transmission</h4>
                 • Transmission Type: Automatic <br>
                 • Engine: Petrol Engine<br>
-                • Engine Type: <a class="sm-info" href="#5.0V8SuperchargedP550SVR">  5.0 V8 Supercharged P550 SVR </a> <br>
+                • Engine Type: <a class="sm-info" href="#5.0V8SuperchargedP550SVR"> 5.0 V8 Supercharged P550 SVR </a> <br>
                 • Gear Box: 8-speed automatic<br>
             </div>
             <div class="exp-sec">
@@ -474,7 +233,7 @@
             <span class="key-feat">Driver Air Bag <i class="fa fa-check-circle ic-check"></i> </span>
             <span class="key-feat">Passenger Airbag <i class="fa fa-check-circle ic-check"></i> </span><br>
             <div class="price-tg">
-            <h2>Price: </h2>
+                <h2>Price: </h2>
             </div>
         </div>
         <div class="options">
@@ -497,7 +256,7 @@
                 <h4>Engine and Transmission</h4>
                 • Transmission Type: Automatic<br>
                 • Engine: Petrol Engine<br>
-                • Engine Type: <a class="sm-info" href="#P450PetrolEngine">   P450 Petrol Engine </a><br>
+                • Engine Type: <a class="sm-info" href="#P450PetrolEngine"> P450 Petrol Engine </a><br>
                 • Gear Box: 8 Speed<br>
             </div>
             <div class="exp-sec">
@@ -517,7 +276,7 @@
             <span class="key-feat">Driver Air Bag <i class="fa fa-check-circle ic-check"></i> </span>
             <span class="key-feat">Passenger Airbag <i class="fa fa-check-circle ic-check"></i> </span><br>
             <div class="price-tg">
-            <h2>Price: </h2>
+                <h2>Price: </h2>
             </div>
         </div>
         <div class="options">
@@ -560,7 +319,7 @@
             <span class="key-feat">Driver Air Bag <i class="fa fa-check-circle ic-check"></i> </span>
             <span class="key-feat">Passenger Airbag <i class="fa fa-check-circle ic-check"></i> </span><br>
             <div class="price-tg">
-            <h2>Price: Rs.46.64 - 48.50 Lakh*</h2>
+                <h2>Price: Rs.46.64 - 48.50 Lakh*</h2>
             </div>
         </div>
         <div class="options">
@@ -603,7 +362,7 @@
             <span class="key-feat">Driver Air Bag <i class="fa fa-check-circle ic-check"></i> </span>
             <span class="key-feat">Passenger Airbag <i class="fa fa-check-circle ic-check"></i> </span><br>
             <div class="price-tg">
-            <h2>Price: </h2>
+                <h2>Price: </h2>
             </div>
         </div>
         <div class="options">
@@ -646,7 +405,7 @@
             <span class="key-feat">Driver Air Bag <i class="fa fa-check-circle ic-check"></i> </span>
             <span class="key-feat">Passenger Airbag <i class="fa fa-check-circle ic-check"></i> </span><br>
             <div class="price-tg">
-            <h2>Price: </h2>
+                <h2>Price: </h2>
             </div>
         </div>
         <div class="options">
@@ -689,7 +448,7 @@
             <span class="key-feat">Driver Air Bag <i class="fa fa-check-circle ic-check"></i> </span>
             <span class="key-feat">Passenger Airbag <i class="fa fa-check-circle ic-check"></i> </span><br>
             <div class="price-tg">
-            <h2>Price: </h2>
+                <h2>Price: </h2>
             </div>
         </div>
         <div class="options">
