--- a/user/om_73/range rover/pricing.html
+++ b/user/om_73/range rover/pricing.html
@@ -3,281 +3,69 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!-- <link rel="stylesheet" href="dark mode/dark-mode.css">
-<link rel="icon" href="favicon/ruby (1).png" type="image/x-icon">
-<link rel="stylesheet" href="mdb/css/global.min.css">
-<link rel="stylesheet" href="CSS/Timestamps.css">
-<link rel="stylesheet" href="mdb/css/mdb.min.css">
-<link rel="stylesheet" href="mdb/css/style.css">
-<link rel="stylesheet" href="css/room.css">
-<link rel="stylesheet" href="design/css/mdb.min.css">
-<link href="rubyproducti9n pro/css/bootstrap.min.css" rel="stylesheet">
-<link href="rubyproducti9n pro/css/mdb.min.css" rel="stylesheet">
-<link rel="stylesheet" href="../js/dark-mode.css">
-<link rel="stylesheet" href="design/css/mdb.min.css">
-<script src="JS/time ago.js" type="text/javascript"></script>
-<script src="timeago/jquery.timeago.js" type="text/javascript"></script>
-<script src="timeago/jquery.min.js" type="text/javascript"></script>
-<script src="test/test_helpers.js" type="text/javascript"></script>
-<script src="jquery.timeago.js" type="text/javascript"></script>
-<script src="timeago/jquery.timeago.js" type="text/javascript"></script>
-<script src="timeago/test/test_helpers.js" type="text/javascript"></script>
-<link rel="icon" href="favicon/favicon.png" sizes="16x16 32x32" type="image/png">
-<link rel="stylesheet" href="CSS/RUBY PRODUCTION.css">
-<link rel="stylesheet" href="dark mode/dark-mode.css">
-<link rel="icon" href="favicon/ruby (1).png" type="image/x-icon">
-<link rel="stylesheet" href="mdb/css/global.min.css">
-<link rel="stylesheet" href="CSS/Timestamps.css">
-<link rel="stylesheet" href="mdb/css/mdb.min.css">
-<link rel="stylesheet" href="mdb/css/style.css">
-<link rel="stylesheet" href="css/room.css">
-<link rel="stylesheet" href="design/css/mdb.min.css">
-<link href="rubyproducti9n pro/css/bootstrap.min.css" rel="stylesheet">
-<link href="rubyproducti9n pro/css/mdb.min.css" rel="stylesheet">
-<link rel="stylesheet" href="../js/dark-mode.css">
-<link rel="stylesheet" href="design/css/mdb.min.css">
-<script src="JS/time ago.js" type="text/javascript"></script>
-<script src="timeago/jquery.timeago.js" type="text/javascript"></script>
-<script src="timeago/jquery.min.js" type="text/javascript"></script>
-<script src="test/test_helpers.js" type="text/javascript"></script>
-<script src="jquery.timeago.js" type="text/javascript"></script>
-<script src="timeago/jquery.timeago.js" type="text/javascript"></script>
-<script src="timeago/test/test_helpers.js" type="text/javascript"></script>
-<link rel="icon" href="favicon/favicon.png" sizes="16x16 32x32" type="image/png">
-<link rel="stylesheet" href="CSS/RUBY PRODUCTION.css"> -->
 <link rel="stylesheet" href="css/global.css">
 <link rel="icon" href="img/favicon.png" sizes="16x16 32x32" type="image/png">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
 <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <title>Jaguar Land Rover Range Rover - Pricing</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Cinzel&family=Comfortaa:wght@700&family=Jost&display=swap');
-            @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Jost&family=Whisper&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Arimo:ital@1&family=Comfortaa:wght@700&family=Raleway:wght@800&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Raleway:wght@200&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Josefin+Sans&family=Raleway:wght@800&display=swap');
-        body{
-            color: rgb(0, 0, 0);
-            background: rgb(255, 255, 255);
-            user-select: none;
-        }
-        .nav-ic{display: none;}
-        .nav-strg{display: block;}
-        /* h1{color: #e0b68c;width: fit-content;padding: 10px 50px; border-bottom: 2px #e0b68c solid;} */
-
-        h1{
-            color: #e0b68c;
-            font-family: 'Cinzel', serif;
-            letter-spacing: 2px;
-        text-shadow: 0 0 10px rgba(255, 0, 0, 0);
-        /* font-style: italic; */
-        padding: 10px 20px;
-        border-bottom: 2px rgba(214, 214, 214, 0) solid;
-        font-size: 40px;
-        margin: 15%;
-        height: 30vh;
-    }
-        a{color: aliceblue;}
-        .rr-btn{
-            position: relative;
-            color: var(--richColor);
-            font-family: 'Cinzel', serif;
-            letter-spacing: 2px;
-            cursor: pointer;
-        }
-        .rr-btn::after{
-            position: absolute;
-            content: " ";
-            width: 0%;
-            height: 2px;
-            background: #e0b68c;
-            left: 50%;
-            bottom: -10px;
-            transition: all 0.4s ease;
-        }
-        .rr-btn:hover::after{
-            width: 15%;
-            left: 42.5%;
-        }
-        .container{
-            background-color: #fafafa;
-            box-shadow: 5px 5px 5px rgba(65, 65, 65, 0.083);
-            /* padding: 10px 20px; */
-            margin: 40px 20px;
-            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        }
-        .car-detail{
-            float: right;
-            font-family: 'Jost', sans-serif;
-            width: 78%;
-        }
-        .car-img{
-            width: 22%;
-        }
-        .car-title{
-            color: var(--richColor);
-            text-shadow: 0 0 10px rgba;
-            font-family: 'Cinzel', serif;
-            letter-spacing: 2px;
-            padding: 10px 20px;
-            height: fit-content;
-            font-size: 20px;
-            font-weight: 900;
-            margin: 10px 0;
-        }
-        .car-info{
-            color: #262626c4;
-            padding: 0px 20px;
-            font-size: 12px;
-            margin: 10px 0;
-        }
-        .car-price{
-            color: #181818de;
-            padding: 5px 20px;
-            font-size: 23px;
-            margin: 10px 0;
-        }
-        @media screen and (max-width: 768px) {
-            .nav-ic{display: block;}
-            .nav-strg{display: none;}
-            .container{
-                background-color: #fafafa00;
-                box-shadow: 5px 5px 0px rgba(65, 65, 65, 0);
-                 padding: 20px 00px;
-                border-bottom: 0px #b9b9b9 solid;
-                margin: 20px 00px;
-                font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-            }
-            .car-detail{
-                float: right;
-                font-family: 'Jost', sans-serif;
-                width: 50%;
-            }
-            .car-img{
-                width: 50%;
-            }
-            .car-title{
-                color: var(--richColor);
-                text-shadow: 0 0 10px rgba;
-                font-family: 'Cinzel', serif;
-                letter-spacing: 2px;
-                padding: 0px 10px;
-                height: fit-content;
-                border: 2px #e0b68c00 solid;
-                font-size: 12px;
-                font-weight: 900;
-                margin: 10px 0;
-            }
-            .car-info{
-                color: #262626c4;
-                padding: 0px 14px;
-                font-size: 10px;
-                margin: 10px 0;
-            }
-            .car-price{
-                color: #181818de;
-                padding: 5px 10px;
-                font-size: 13px;
-                margin: 10px 0;
-            }
-            .know-more{display: none;}
-        }
+        @import url('https://fonts.googleapis.com/css2?family=Cinzel&family=Comfortaa:wght@700&family=Jost&display=swap');@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Jost&family=Whisper&display=swap');@import url('https://fonts.googleapis.com/css2?family=Arimo:ital@1&family=Comfortaa:wght@700&family=Raleway:wght@800&display=swap');@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Raleway:wght@200&display=swap');@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Josefin+Sans&family=Raleway:wght@800&display=swap');body{color:rgb(0,0,0);background:rgb(255,255,255);user-select:none}.nav-ic{display:none}.nav-strg{display:block}h1{color:#e0b68c;font-family:'Cinzel',serif;letter-spacing:2px;text-shadow:0 0 10px rgba(255,0,0,0);padding:10px 20px;border-bottom:2px rgba(214,214,214,0) solid;font-size:40px;margin:15%;height:30vh}a{color:aliceblue}.rr-btn{position:relative;color:var(--richColor);font-family:'Cinzel',serif;letter-spacing:2px;cursor:pointer}.rr-btn::after{position:absolute;content:"";width:0%;height:2px;background:#e0b68c;left:50%;bottom:-10px;transition:all 0.4s ease}.rr-btn:hover::after{width:15%;left:42.5%}.container{background-color:#fafafa;box-shadow:5px 5px 5px rgba(65,65,65,0.083);margin:40px 20px;font-family:'Lucida Sans','Lucida Sans Regular','Lucida Grande','Lucida Sans Unicode',Geneva,Verdana,sans-serif}.car-detail{float:right;font-family:'Jost',sans-serif;width:78%}.car-img{width:22%}.car-title{color:var(--richColor);text-shadow:0 0 10px rgba;font-family:'Cinzel',serif;letter-spacing:2px;padding:10px 20px;height:fit-content;font-size:20px;font-weight:900;margin:10px 0}.car-info{color:#262626c4;padding:0px 20px;font-size:12px;margin:10px 0}.car-price{color:#181818de;padding:5px 20px;font-size:23px;margin:10px 0}@media screen and(max-width:768px){.nav-ic{display:block}.nav-strg{display:none}.container{background-color:#fafafa00;box-shadow:5px 5px 0px rgba(65,65,65,0);padding:20px 00px;border-bottom:0px #b9b9b9 solid;margin:20px 00px;font-family:'Lucida Sans','Lucida Sans Regular','Lucida Grande','Lucida Sans Unicode',Geneva,Verdana,sans-serif}.car-detail{float:right;font-family:'Jost',sans-serif;width:50%}.car-img{width:50%}.car-title{color:var(--richColor);text-shadow:0 0 10px rgba;font-family:'Cinzel',serif;letter-spacing:2px;padding:0px 10px;height:fit-content;border:2px #e0b68c00 solid;font-size:12px;font-weight:900;margin:10px 0}.car-info{color:#262626c4;padding:0px 14px;font-size:10px;margin:10px 0}.car-price{color:#181818de;padding:5px 10px;font-size:13px;margin:10px 0}.know-more{display:none}}
     </style>
 </head>
 <body>
     <div id="notice" class="maintain-container"></div>
     <div class="home">
 <div id="navbar"></div><br><br><br><br><br>
-    <center>
-        <h1>Pricing</h1>
-    </center>
-    <div class="container">
-        <img class="car-img" src="https://stimg.cardekho.com/images/carexteriorimages/630x420/Land-Rover/Range-Rover/8672/1642077991894/front-left-side-47.jpg?impolicy=resize&imwidth=480">
-        <div class="car-detail">
+<center>
+    <h1>Pricing</h1>
+</center>
+<div class="container"> <img class="car-img" src="https://stimg.cardekho.com/images/carexteriorimages/630x420/Land-Rover/Range-Rover/8672/1642077991894/front-left-side-47.jpg?impolicy=resize&imwidth=480">
+    <div class="car-detail">
         <div class="car-title">Land Rover Range Rover ...</div>
-        <div class="car-info">
-            Diesel/Petrol • Automatic
-        </div>
-        <div class="car-price">
-            Rs.2.32 - 3.41 Cr*
-        </div>
-        <a class="know-more" href="https://www.cardekho.com/land-rover/range-rover">Know More <i class="fa fa-chevron-right"></i> </a>
+        <div class="car-info"> Diesel/Petrol • Automatic </div>
+        <div class="car-price"> Rs.2.32 - 3.41 Cr* </div> <a class="know-more" href="https://www.cardekho.com/land-rover/range-rover">Know More <i class="fa fa-chevron-right"></i> </a>
     </div>
-    </div>
-    <div class="container">
-        <img class="car-img" src="https://stimg.cardekho.com/images/carexteriorimages/630x420/Land-Rover/Range-Rover-Velar/8456/1623994273592/front-left-side-47.jpg?impolicy=resize&imwidth=480">
-        <div class="car-detail">
+</div>
+<div class="container"> <img class="car-img" src="https://stimg.cardekho.com/images/carexteriorimages/630x420/Land-Rover/Range-Rover-Velar/8456/1623994273592/front-left-side-47.jpg?impolicy=resize&imwidth=480">
+    <div class="car-detail">
         <div class="car-title">Range Rover Velar</div>
-        <div class="car-info">
-            Diesel/Petrol • Automatic
-        </div>
-        <div class="car-price">
-            86.75 Lakh*
-        </div>
-        <a class="know-more" href="https://www.cardekho.com/land-rover/range-rover-velar">Know More <i class="fa fa-chevron-right"></i> </a>
+        <div class="car-info"> Diesel/Petrol • Automatic </div>
+        <div class="car-price"> 86.75 Lakh* </div> <a class="know-more" href="https://www.cardekho.com/land-rover/range-rover-velar">Know More <i class="fa fa-chevron-right"></i> </a>
     </div>
-    </div>
-    <div class="container">
-        <img class="car-img" src="https://stimg.cardekho.com/images/carexteriorimages/630x420/Land-Rover/Defender/7641/1624347789462/front-left-side-47.jpg?impolicy=resize&imwidth=480">
-        <div class="car-detail">
+</div>
+<div class="container"> <img class="car-img" src="https://stimg.cardekho.com/images/carexteriorimages/630x420/Land-Rover/Defender/7641/1624347789462/front-left-side-47.jpg?impolicy=resize&imwidth=480">
+    <div class="car-detail">
         <div class="car-title">Range Rover Defender</div>
-        <div class="car-info">
-            Diesel/Petrol • Automatic
-        </div>
-        <div class="car-price">
-            Rs.80.72 Lakh - 1.22 Cr*
-        </div>
-        <a class="know-more" href="https://www.cardekho.com/land-rover/defender">Know More <i class="fa fa-chevron-right"></i> </a>
+        <div class="car-info"> Diesel/Petrol • Automatic </div>
+        <div class="car-price"> Rs.80.72 Lakh - 1.22 Cr* </div> <a class="know-more" href="https://www.cardekho.com/land-rover/defender">Know More <i class="fa fa-chevron-right"></i> </a>
     </div>
-    </div>
-    <div class="container">
-        <img class="car-img" src="https://stimg.cardekho.com/images/carexteriorimages/630x420/Land-Rover/Range-Rover-Evoque/8492/1646300904361/front-left-side-47.jpg?impolicy=resize&imwidth=480">
-        <div class="car-detail">
+</div>
+<div class="container"> <img class="car-img" src="https://stimg.cardekho.com/images/carexteriorimages/630x420/Land-Rover/Range-Rover-Evoque/8492/1646300904361/front-left-side-47.jpg?impolicy=resize&imwidth=480">
+    <div class="car-detail">
         <div class="car-title">Range Rover Evoque</div>
-        <div class="car-info">
-            Diesel/Petrol • Automatic
-        </div>
-        <div class="car-price">
-            Rs.69.99 Lakh*
-        </div>
-        <a class="know-more" href="https://www.cardekho.com/land-rover/range-rover-evoque">Know More <i class="fa fa-chevron-right"></i> </a>
+        <div class="car-info"> Diesel/Petrol • Automatic </div>
+        <div class="car-price"> Rs.69.99 Lakh* </div> <a class="know-more" href="https://www.cardekho.com/land-rover/range-rover-evoque">Know More <i class="fa fa-chevron-right"></i> </a>
     </div>
-    </div>
-    <div class="container">
-        <img class="car-img" src="https://stimg.cardekho.com/images/carexteriorimages/630x420/Land-Rover/Range-Rover-Sport/8044/1646805517250/front-left-side-47.jpg?impolicy=resize&imwidth=480">
-        <div class="car-detail">
+</div>
+<div class="container"> <img class="car-img" src="https://stimg.cardekho.com/images/carexteriorimages/630x420/Land-Rover/Range-Rover-Sport/8044/1646805517250/front-left-side-47.jpg?impolicy=resize&imwidth=480">
+    <div class="car-detail">
         <div class="car-title">Range Rover Sport</div>
-        <div class="car-info">
-            Diesel/Petrol • Automatic
-        </div>
-        <div class="car-price">
-            Rs.91.27 Lakh - 2.19 Cr*
-        </div>
-        <a class="know-more" href="https://www.cardekho.com/carmodels/Land_Rover/Land_Rover_Range_Rover_Sport">Know More <i class="fa fa-chevron-right"></i> </a>
+        <div class="car-info"> Diesel/Petrol • Automatic </div>
+        <div class="car-price"> Rs.91.27 Lakh - 2.19 Cr* </div> <a class="know-more" href="https://www.cardekho.com/carmodels/Land_Rover/Land_Rover_Range_Rover_Sport">Know More <i class="fa fa-chevron-right"></i> </a>
     </div>
-    </div>
-    <div class="container">
-        <img class="car-img" src="https://stimg.cardekho.com/images/carexteriorimages/630x420/Land-Rover/Discovery/8514/1646805311941/front-left-side-47.jpg?impolicy=resize&imwidth=480">
-        <div class="car-detail">
+</div>
+<div class="container"> <img class="car-img" src="https://stimg.cardekho.com/images/carexteriorimages/630x420/Land-Rover/Discovery/8514/1646805311941/front-left-side-47.jpg?impolicy=resize&imwidth=480">
+    <div class="car-detail">
         <div class="car-title">Range Rover Discovery</div>
-        <div class="car-info">
-            Diesel/Petrol • Automatic
-        </div>
-        <div class="car-price">
-            Rs.88.06 Lakh - 1.20 Cr*
-        </div>
-        <a class="know-more" href="https://www.cardekho.com/carmodels/Land_Rover/Land_Rover_Range_Rover_Sport">Know More <i class="fa fa-chevron-right"></i> </a>
+        <div class="car-info"> Diesel/Petrol • Automatic </div>
+        <div class="car-price"> Rs.88.06 Lakh - 1.20 Cr* </div> <a class="know-more" href="https://www.cardekho.com/carmodels/Land_Rover/Land_Rover_Range_Rover_Sport">Know More <i class="fa fa-chevron-right"></i> </a>
     </div>
-    </div>
-
-    <div class="rr-btn" onclick="more()">
-        <center>
-            Browse More
-        </center>
-        </div>
-
-    <div id="explore"></div>
-    </div>
+</div>
+<div class="rr-btn" onclick="more()">
+    <center> Browse More </center>
+</div>
+<div id="explore"></div>
+</div>
     <script>
         function more(){window.location.href = "https://www.cardekho.com/cars/Land_Rover";}</script>
     <script src="js/global.js"></script>
