--- a/user/om_73/range rover/generations.html
+++ b/user/om_73/range rover/generations.html
@@ -3,273 +3,13 @@
 <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!-- <link rel="stylesheet" href="dark mode/dark-mode.css">
-<link rel="icon" href="favicon/ruby (1).png" type="image/x-icon">
-<link rel="stylesheet" href="mdb/css/global.min.css">
-<link rel="stylesheet" href="CSS/Timestamps.css">
-<link rel="stylesheet" href="mdb/css/mdb.min.css">
-<link rel="stylesheet" href="mdb/css/style.css">
-<link rel="stylesheet" href="css/room.css">
-<link rel="stylesheet" href="design/css/mdb.min.css">
-<link href="rubyproducti9n pro/css/bootstrap.min.css" rel="stylesheet">
-<link href="rubyproducti9n pro/css/mdb.min.css" rel="stylesheet">
-<link rel="stylesheet" href="../js/dark-mode.css">
-<link rel="stylesheet" href="design/css/mdb.min.css">
-<script src="JS/time ago.js" type="text/javascript"></script>
-<script src="timeago/jquery.timeago.js" type="text/javascript"></script>
-<script src="timeago/jquery.min.js" type="text/javascript"></script>
-<script src="test/test_helpers.js" type="text/javascript"></script>
-<script src="jquery.timeago.js" type="text/javascript"></script>
-<script src="timeago/jquery.timeago.js" type="text/javascript"></script>
-<script src="timeago/test/test_helpers.js" type="text/javascript"></script>
-<link rel="icon" href="favicon/favicon.png" sizes="16x16 32x32" type="image/png">
-<link rel="stylesheet" href="CSS/RUBY PRODUCTION.css">
-<link rel="stylesheet" href="dark mode/dark-mode.css">
-<link rel="icon" href="favicon/ruby (1).png" type="image/x-icon">
-<link rel="stylesheet" href="mdb/css/global.min.css">
-<link rel="stylesheet" href="CSS/Timestamps.css">
-<link rel="stylesheet" href="mdb/css/mdb.min.css">
-<link rel="stylesheet" href="mdb/css/style.css">
-<link rel="stylesheet" href="css/room.css">
-<link rel="stylesheet" href="design/css/mdb.min.css">
-<link href="rubyproducti9n pro/css/bootstrap.min.css" rel="stylesheet">
-<link href="rubyproducti9n pro/css/mdb.min.css" rel="stylesheet">
-<link rel="stylesheet" href="../js/dark-mode.css">
-<link rel="stylesheet" href="design/css/mdb.min.css">
-<script src="JS/time ago.js" type="text/javascript"></script>
-<script src="timeago/jquery.timeago.js" type="text/javascript"></script>
-<script src="timeago/jquery.min.js" type="text/javascript"></script>
-<script src="test/test_helpers.js" type="text/javascript"></script>
-<script src="jquery.timeago.js" type="text/javascript"></script>
-<script src="timeago/jquery.timeago.js" type="text/javascript"></script>
-<script src="timeago/test/test_helpers.js" type="text/javascript"></script>
-<link rel="icon" href="favicon/favicon.png" sizes="16x16 32x32" type="image/png">
-<link rel="stylesheet" href="CSS/RUBY PRODUCTION.css"> -->
 <link rel="stylesheet" href="css/global.css">
 <link rel="icon" href="img/favicon.png" sizes="16x16 32x32" type="image/png">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
 <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <title> Jaguar Land Rover Ranger Rover - Generations </title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Cinzel&family=Comfortaa:wght@700&family=Jost&display=swap');
-            @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Jost&family=Whisper&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Arimo:ital@1&family=Comfortaa:wght@700&family=Raleway:wght@800&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Raleway:wght@200&display=swap');
-        @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Josefin+Sans&family=Raleway:wght@800&display=swap');
-        body{display: block;
-            color: rgb(0, 0, 0);
-            background: rgb(255, 255, 255);
-            user-select: none;
-        }
-        center h1{
-            color: #e0b68c;
-            font-family: 'Cinzel', serif;
-            letter-spacing: 2px;
-        text-shadow: 0 0 10px rgba(255, 0, 0, 0);
-        /* font-style: italic; */
-        padding: 10px 20px;
-        border-bottom: 2px rgba(214, 214, 214, 0) solid;
-        font-size: 40px;
-        margin: 15%;
-        height: 30vh;
-    }
-        .grp-info-container{
-            border-radius: 6px;
-            height: 19vh;
-            border: 2px #242424 solid;
-        }
-        .grp-img{
-            float: left;
-            width: 20%;
-            border-right: 2px #242424 solid;
-            border-radius: 0px;
-            width: 10%;
-        }
-        .grp-info{
-            border: 2px #24242400 solid;
-            margin: 10px 150px;
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        }
-        .main-title{
-            color: rgb(36, 36, 36);
-            background-color: #fafafa;
-            /* background: linear-gradient(-180deg, #007bff, #005ec2); */
-            padding: 10px 40px;
-            margin: 20px 20px;
-            border-bottom: 4px #444444 solid;
-            border-radius: 0px;
-            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-        }
-        .first-gen-container{
-            margin: 20px 20px;
-            padding: 20px;
-            background-color: #fafafa00;
-            border: 2px #f0f0f000 solid;
-            border-radius: 16px;
-            line-height: 23px;
-            font-family: 'Arimo', sans-serif;
-        }
-        .first-gen-container h1{
-            color: #e0b68c;
-            font-family: 'Cinzel', serif;
-            letter-spacing: 1px;
-            font-size: 30px;
-            transform: rotate(-2deg);
-        }
-        .first-gen-img{
-            width: 32%;
-            border: 6px var(--richColor) solid;
-            border-radius: 0px;
-            transform: rotate(-3deg);
-        }
-        .first-gen-info{
-            color: #484848;
-            font-family: 'Jost', sans-serif;
-            letter-spacing: 0.5px;
-            text-indent: 50px;
-            padding: 0px 10px ;
-            border: 2px rgba(0, 0, 0, 0) solid;
-        }
-        .right{
-            color: #484848;
-            font-family: 'Jost', sans-serif;
-            letter-spacing: 0.5px;
-            float: right;
-            width: 65%;
-            margin-top: -10px;
-            padding: 10px ;
-            border: 2px rgba(0, 0, 0, 0) solid;
-        }
-        .gen-container{
-            margin: 60px 20px;
-            padding: 20px;
-            background-color: #fafafa00;
-            border: 2px #007bff00 solid;
-            border-radius: 16px;
-            line-height: 30px;
-            font-family: 'Jost', sans-serif;
-            letter-spacing: 0.5px;
-        }
-        .gen-container h1{
-            color: #e0b68c;
-            font-family: 'Cinzel', serif;
-            letter-spacing: 1px;
-            font-size: 30px;
-        }
-        .gen-img{
-            float: right;
-            margin: 10px;
-            border: 6px var(--richColor) solid;
-            border-radius: 0px;
-            width: 30%;
-            transform: rotate(-3deg);
-            box-shadow: 10px 10px 0 rgba(0, 0, 0, 0);
-        }
-        .gen-info{
-            text-indent: 50px;
-            padding: 0px 10px ;
-            border: 2px rgba(0, 0, 0, 0) solid;
-        }
-        footer{
-            background-color: #005ec2;
-            padding: 20px;
-        }
-        .mini-nav-link{
-            display: inline-block;
-            width: 10%;
-            color: #fff;
-        }
-        .overview{
-            border: 2px rgba(0, 0, 0, 0) solid;
-            padding: 0 20px;
-            font-family: 'Jost', sans-serif;
-            letter-spacing: 1px;
-            color: rgb(56, 56, 56);
-        }
-        .overview h3{
-            color: rgb(12, 12, 12);
-            font-family: 'Cinzel', serif;
-            letter-spacing: 2px;
-        }
-    .nav-ic{display: none;}
-    .nav-strg{display: block;}
-@media screen and (max-width: 768px) {
-    body{opacity: 1;}
-    .nav-ic{display: block;}
-    .nav-strg{display: none;}
-        .main-title{
-            color: #fff;
-            background-color: #ffffff;
-            /* background: linear-gradient(-180deg, #007bff, #005ec2); */
-            padding: 20px 40px;
-            margin: 20px 20px;
-            border-bottom: 2px #007bff solid;
-            border-radius: 6px;
-            font-family: Georgia, 'Times New Roman', Times, serif;
-        }
-        .first-gen-container{
-            margin: 0px 0px;
-            padding: 0px;
-            background-color: #f2f2f200;
-            border: 0px #007bff solid;
-            border-radius: 16px;
-            line-height: 23px;
-            font-family: 'Arimo', sans-serif;
-        }
-        .first-gen-container h1{
-            color: #e0b68c;
-            font-family: 'Cinzel', serif;
-            letter-spacing: 2px;
-            font-size: 25px;
-            transform: rotate(0deg);
-        }
-        .first-gen-img{
-            width: 100%;
-            border: 0px #00000000 solid;
-            transform: rotate(0deg);
-            border-radius: 0px;
-        }
-        .first-gen-info{
-            text-indent: 50px;
-            padding: 0px 10px ;
-            border: 2px rgba(0, 0, 0, 0) solid;
-        }
-        .right{
-            float: right;
-            text-indent: 50px;
-            width: 93%;
-            margin-top: -10px;
-            padding: 10px ;
-            border: 2px rgba(0, 0, 0, 0) solid;
-        }
-        .gen-container{
-            margin: 20px 0px;
-            padding: 10px;
-            background-color: #21212100;
-            border: 0px #007bff solid;
-            border-radius: 6px;
-            line-height: 30px;
-            font-family: 'Arimo', sans-serif;
-        }
-        .gen-container h1{
-            font-size: 22px;
-            letter-spacing: 2px;
-        }
-        .gen-img{
-            display: block;
-            float: right;
-            padding: 0px;
-            border: 0px #00000000 solid;
-            border-radius: 0px;
-            transform: rotate(0deg);
-            width: 94%;
-        }
-        .gen-info{
-            text-indent: 25px;
-            padding: 0px 10px ;
-            border: 2px rgba(0, 0, 0, 0) solid;
-        }
-}
+      @import url('https://fonts.googleapis.com/css2?family=Cinzel&family=Comfortaa:wght@700&family=Jost&display=swap');@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Jost&family=Whisper&display=swap');@import url('https://fonts.googleapis.com/css2?family=Arimo:ital@1&family=Comfortaa:wght@700&family=Raleway:wght@800&display=swap');@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Raleway:wght@200&display=swap');@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Josefin+Sans&family=Raleway:wght@800&display=swap');body{display:block;color:rgb(0,0,0);background:rgb(255,255,255);user-select:none}center h1{color:#e0b68c;font-family:'Cinzel',serif;letter-spacing:2px;text-shadow:0 0 10px rgba(255,0,0,0);padding:10px 20px;border-bottom:2px rgba(214,214,214,0) solid;font-size:40px;margin:15%;height:30vh}.grp-info-container{border-radius:6px;height:19vh;border:2px #242424 solid}.grp-img{float:left;width:20%;border-right:2px #242424 solid;border-radius:0px;width:10%}.grp-info{border:2px #24242400 solid;margin:10px 150px;font-family:'Gill Sans','Gill Sans MT',Calibri,'Trebuchet MS',sans-serif}.main-title{color:rgb(36,36,36);background-color:#fafafa;padding:10px 40px;margin:20px 20px;border-bottom:4px #444444 solid;border-radius:0px;font-family:'Franklin Gothic Medium','Arial Narrow',Arial,sans-serif}.first-gen-container{margin:20px 20px;padding:20px;background-color:#fafafa00;border:2px #f0f0f000 solid;border-radius:16px;line-height:23px;font-family:'Arimo',sans-serif}.first-gen-container h1{color:#e0b68c;font-family:'Cinzel',serif;letter-spacing:1px;font-size:30px;transform:rotate(-2deg)}.first-gen-img{width:32%;border:6px var(--richColor) solid;border-radius:0px;transform:rotate(-3deg)}.first-gen-info{color:#484848;font-family:'Jost',sans-serif;letter-spacing:0.5px;text-indent:50px;padding:0px 10px;border:2px rgba(0,0,0,0) solid}.right{color:#484848;font-family:'Jost',sans-serif;letter-spacing:0.5px;float:right;width:65%;margin-top:-10px;padding:10px;border:2px rgba(0,0,0,0) solid}.gen-container{margin:60px 20px;padding:20px;background-color:#fafafa00;border:2px #007bff00 solid;border-radius:16px;line-height:30px;font-family:'Jost',sans-serif;letter-spacing:0.5px}.gen-container h1{color:#e0b68c;font-family:'Cinzel',serif;letter-spacing:1px;font-size:30px}.gen-img{float:right;margin:10px;border:6px var(--richColor) solid;border-radius:0px;width:30%;transform:rotate(-3deg);box-shadow:10px 10px 0 rgba(0,0,0,0)}.gen-info{text-indent:50px;padding:0px 10px;border:2px rgba(0,0,0,0) solid}footer{background-color:#005ec2;padding:20px}.mini-nav-link{display:inline-block;width:10%;color:#fff}.overview{border:2px rgba(0,0,0,0) solid;padding:0 20px;font-family:'Jost',sans-serif;letter-spacing:1px;color:rgb(56,56,56)}.overview h3{color:rgb(12,12,12);font-family:'Cinzel',serif;letter-spacing:2px}.nav-ic{display:none}.nav-strg{display:block}@media screen and(max-width:768px){body{opacity:1}.nav-ic{display:block}.nav-strg{display:none}.main-title{color:#fff;background-color:#ffffff;padding:20px 40px;margin:20px 20px;border-bottom:2px #007bff solid;border-radius:6px;font-family:Georgia,'Times New Roman',Times,serif}.first-gen-container{margin:0px 0px;padding:0px;background-color:#f2f2f200;border:0px #007bff solid;border-radius:16px;line-height:23px;font-family:'Arimo',sans-serif}.first-gen-container h1{color:#e0b68c;font-family:'Cinzel',serif;letter-spacing:2px;font-size:25px;transform:rotate(0deg)}.first-gen-img{width:100%;border:0px #00000000 solid;transform:rotate(0deg);border-radius:0px}.first-gen-info{text-indent:50px;padding:0px 10px;border:2px rgba(0,0,0,0) solid}.right{float:right;text-indent:50px;width:93%;margin-top:-10px;padding:10px;border:2px rgba(0,0,0,0) solid}.gen-container{margin:20px 0px;padding:10px;background-color:#21212100;border:0px #007bff solid;border-radius:6px;line-height:30px;font-family:'Arimo',sans-serif}.gen-container h1{font-size:22px;letter-spacing:2px}.gen-img{display:block;float:right;padding:0px;border:0px #00000000 solid;border-radius:0px;transform:rotate(0deg);width:94%}.gen-info{text-indent:25px;padding:0px 10px;border:2px rgba(0,0,0,0) solid}}
     </style>
 </head>
 <body>
