--- a/user/om_73/range rover/index.html
+++ b/user/om_73/range rover/index.html
@@ -1,52 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <!-- <link rel="stylesheet" href="dark mode/dark-mode.css">
-<link rel="icon" href="favicon/ruby (1).png" type="image/x-icon">
-<link rel="stylesheet" href="mdb/css/global.min.css">
-<link rel="stylesheet" href="CSS/Timestamps.css">
-<link rel="stylesheet" href="mdb/css/mdb.min.css">
-<link rel="stylesheet" href="mdb/css/style.css">
-<link rel="stylesheet" href="css/room.css">
-<link rel="stylesheet" href="design/css/mdb.min.css">
-<link href="rubyproducti9n pro/css/bootstrap.min.css" rel="stylesheet">
-<link href="rubyproducti9n pro/css/mdb.min.css" rel="stylesheet">
-<link rel="stylesheet" href="../js/dark-mode.css">
-<link rel="stylesheet" href="design/css/mdb.min.css">
-<script src="JS/time ago.js" type="text/javascript"></script>
-<script src="timeago/jquery.timeago.js" type="text/javascript"></script>
-<script src="timeago/jquery.min.js" type="text/javascript"></script>
-<script src="test/test_helpers.js" type="text/javascript"></script>
-<script src="jquery.timeago.js" type="text/javascript"></script>
-<script src="timeago/jquery.timeago.js" type="text/javascript"></script>
-<script src="timeago/test/test_helpers.js" type="text/javascript"></script>
-<link rel="icon" href="favicon/favicon.png" sizes="16x16 32x32" type="image/png">
-<link rel="stylesheet" href="CSS/RUBY PRODUCTION.css">
-<link rel="stylesheet" href="dark mode/dark-mode.css">
-<link rel="icon" href="favicon/ruby (1).png" type="image/x-icon">
-<link rel="stylesheet" href="mdb/css/global.min.css">
-<link rel="stylesheet" href="CSS/Timestamps.css">
-<link rel="stylesheet" href="mdb/css/mdb.min.css">
-<link rel="stylesheet" href="mdb/css/style.css">
-<link rel="stylesheet" href="css/room.css">
-<link rel="stylesheet" href="design/css/mdb.min.css">
-<link href="rubyproducti9n pro/css/bootstrap.min.css" rel="stylesheet">
-<link href="rubyproducti9n pro/css/mdb.min.css" rel="stylesheet">
-<link rel="stylesheet" href="../js/dark-mode.css">
-<link rel="stylesheet" href="design/css/mdb.min.css">
-<script src="JS/time ago.js" type="text/javascript"></script>
-<script src="timeago/jquery.timeago.js" type="text/javascript"></script>
-<script src="timeago/jquery.min.js" type="text/javascript"></script>
-<script src="test/test_helpers.js" type="text/javascript"></script>
-<script src="jquery.timeago.js" type="text/javascript"></script>
-<script src="timeago/jquery.timeago.js" type="text/javascript"></script>
-<script src="timeago/test/test_helpers.js" type="text/javascript"></script>
-<link rel="icon" href="favicon/favicon.png" sizes="16x16 32x32" type="image/png">
-<link rel="stylesheet" href="CSS/RUBY PRODUCTION.css"> -->
  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
  <link rel="stylesheet" href="css/global.css">
@@ -55,171 +12,8 @@
  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
  <title>Jaguar Land Rover Range Rover</title>
  <style>
-  @import url('https://fonts.googleapis.com/css2?family=Cinzel&family=Comfortaa:wght@700&family=Jost&display=swap');
-      @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Jost&family=Whisper&display=swap');
-
-      @import url('https://fonts.googleapis.com/css2?family=Arimo:ital@1&family=Comfortaa:wght@700&family=Raleway:wght@800&display=swap');
-      @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Raleway:wght@200&display=swap');
-      @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Josefin+Sans&family=Raleway:wght@800&display=swap');
-      body {
-        color: var(--black);
-        background: var(--white);
-        user-select: none
-    }
-
-    h1 {
-        color: var(--richColor);
-        font-family: 'Cinzel', serif;
-        letter-spacing: 1px;
-        text-shadow: 0 0 10px rgba(255, 0, 0, 0);
-        padding: 10px 20px;
-        border-bottom: 2px rgba(214, 214, 214, 0) solid;
-        font-size: 40px;
-        margin: 15%;
-        height: 30vh
-    }
-
-    .nav-ic {
-        display: none
-    }
-
-    .nav-strg {
-        display: block
-    }
-
-    .container {
-        border: 2px var(--transparent) solid;
-        padding: 0px;
-        margin: 60px 0
-    }
-
-    .mid-section {
-        padding: 70px 20px
-    }
-
-    .mid-section h1 {
-        margin: 0px 20px;
-        border: 2px var(--transparent) solid;
-        width: fit-content;
-        height: fit-content;
-        font-family: 'Cinzel', serif
-    }
-
-    .mid-section h5 {
-        letter-spacing: 0.5px;
-        border: 2px var(--transparent) solid;
-        color: var(--faintDark);
-        margin: 0px 50px;
-        height: fit-content;
-        font-size: 20px;
-        font-family: 'Cinzel', serif
-    }
-
-    .mid-section h6 {
-        width: 60%;
-        line-height: 28px;
-        font-weight: normal;
-        letter-spacing: 0.5px;
-        border: 2px var(--transparent) solid;
-        color: var(--faintDark);
-        margin: 10px 60px;
-        height: fit-content;
-        font-size: 20px;
-        font-family: 'Jost', sans-serif;
-    }
-
-    .app-right {
-        float: right;
-        width: 30%;
-        transform: rotate(3deg);
-        margin: 20px 40px;
-        box-shadow: 10px 10px 0px var(--shadow)
-    }
-
-    .yt-vid {
-        width: 100%
-    }
-
-    .iframe {
-        width: 80%;
-        height: 500px
-    }
-
-    @media screen and(max-width:768px) {
-        .nav-ic {
-            display: block
-        }
-
-        .nav-strg {
-            display: none
-        }
-
-        .container {
-            border: 2px #00000000 solid;
-            padding: 0px;
-            margin: 60px 0
-        }
-
-        .mid-section {
-            padding: 70px 10px
-        }
-
-        .mid-section h1 {
-            margin: 0px 0px;
-            border: 2px rgba(0, 0, 0, 0) solid;
-            width: fit-content;
-            height: fit-content;
-            font-size: 30px;
-            font-family: 'Cinzel', serif
-        }
-
-        .mid-section h5 {
-            letter-spacing: 0.5px;
-            border: 2px rgba(0, 0, 0, 0) solid;
-            color: rgb(34, 34, 34);
-            margin: 0px 20px;
-            height: fit-content;
-            font-size: 20px;
-            font-family: 'Cinzel', serif
-        }
-
-        .mid-section h6 {
-            width: 90%;
-            line-height: 28px;
-            font-weight: normal;
-            letter-spacing: 0.5px;
-            border: 2px rgba(0, 0, 0, 0) solid;
-            color: rgb(112, 112, 112);
-            margin: 10px 20px;
-            height: fit-content;
-            font-size: 20px;
-            font-family: 'Jost', sans-serif
-        }
-
-        .app-right {
-            float: right;
-            width: 100%;
-            transform: rotate(0deg);
-            margin: 20px 0px;
-            box-shadow: 0px 0px 0px rgb(56, 56, 56)
-        }
-
-        .yt-vid {
-            border: 2px #e00303 solid;
-            width: 100%
-        }
-
-        .iframe {
-            width: 100%;
-            height: 200px
-        }
-    }
+    @import url('https://fonts.googleapis.com/css2?family=Cinzel&family=Comfortaa:wght@700&family=Jost&display=swap');@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Jost&family=Whisper&display=swap');@import url('https://fonts.googleapis.com/css2?family=Arimo:ital@1&family=Comfortaa:wght@700&family=Raleway:wght@800&display=swap');@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Raleway:wght@200&display=swap');@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Josefin+Sans&family=Raleway:wght@800&display=swap');body{color:var(--black);background:var(--white);user-select:none}h1{color:var(--richColor);font-family:'Cinzel',serif;letter-spacing:1px;text-shadow:0 0 10px rgba(255,0,0,0);padding:10px 20px;border-bottom:2px rgba(214,214,214,0) solid;font-size:40px;margin:15%;height:30vh}.nav-ic{display:none}.nav-strg{display:block}.container{border:2px var(--transparent) solid;padding:0px;margin:60px 0}.mid-section{padding:70px 20px}.mid-section h1{margin:0px 20px;border:2px var(--transparent) solid;width:fit-content;height:fit-content;font-family:'Cinzel',serif}.mid-section h5{letter-spacing:0.5px;border:2px var(--transparent) solid;color:var(--faintDark);margin:0px 50px;height:fit-content;font-size:20px;font-family:'Cinzel',serif}.mid-section h6{width:60%;line-height:28px;font-weight:normal;letter-spacing:0.5px;border:2px var(--transparent) solid;color:var(--faintDark);margin:10px 60px;height:fit-content;font-size:20px;font-family:'Jost',sans-serif}.app-right{float:right;width:30%;transform:rotate(3deg);margin:20px 40px;box-shadow:10px 10px 0px var(--shadow)}.yt-vid{width:100%}.iframe{width:80%;height:500px}@media screen and(max-width:768px){.nav-ic{display:block}.nav-strg{display:none}.container{border:2px #00000000 solid;padding:0px;margin:60px 0}.mid-section{padding:70px 10px}.mid-section h1{margin:0px 0px;border:2px rgba(0,0,0,0) solid;width:fit-content;height:fit-content;font-size:30px;font-family:'Cinzel',serif}.mid-section h5{letter-spacing:0.5px;border:2px rgba(0,0,0,0) solid;color:rgb(34,34,34);margin:0px 20px;height:fit-content;font-size:20px;font-family:'Cinzel',serif}.mid-section h6{width:90%;line-height:28px;font-weight:normal;letter-spacing:0.5px;border:2px rgba(0,0,0,0) solid;color:rgb(112,112,112);margin:10px 20px;height:fit-content;font-size:20px;font-family:'Jost',sans-serif}.app-right{float:right;width:100%;transform:rotate(0deg);margin:20px 0px;box-shadow:0px 0px 0px rgb(56,56,56)}.yt-vid{border:2px #e00303 solid;width:100%}.iframe{width:100%;height:200px}}
  </style>
- <script>
-  $(window).load(function() {
-      $('#loading').delay(2625).fadeOut(200);
-    });
- </script>
 </head>
 
 <body>
@@ -353,5 +147,46 @@
  </script>
  <script src="js/global.js"></script>
 </body>
-
 </html>
+<!-- <link rel="stylesheet" href="dark mode/dark-mode.css">
+<link rel="icon" href="favicon/ruby (1).png" type="image/x-icon">
+<link rel="stylesheet" href="mdb/css/global.min.css">
+<link rel="stylesheet" href="CSS/Timestamps.css">
+<link rel="stylesheet" href="mdb/css/mdb.min.css">
+<link rel="stylesheet" href="mdb/css/style.css">
+<link rel="stylesheet" href="css/room.css">
+<link rel="stylesheet" href="design/css/mdb.min.css">
+<link href="rubyproducti9n pro/css/bootstrap.min.css" rel="stylesheet">
+<link href="rubyproducti9n pro/css/mdb.min.css" rel="stylesheet">
+<link rel="stylesheet" href="../js/dark-mode.css">
+<link rel="stylesheet" href="design/css/mdb.min.css">
+<script src="JS/time ago.js" type="text/javascript"></script>
+<script src="timeago/jquery.timeago.js" type="text/javascript"></script>
+<script src="timeago/jquery.min.js" type="text/javascript"></script>
+<script src="test/test_helpers.js" type="text/javascript"></script>
+<script src="jquery.timeago.js" type="text/javascript"></script>
+<script src="timeago/jquery.timeago.js" type="text/javascript"></script>
+<script src="timeago/test/test_helpers.js" type="text/javascript"></script>
+<link rel="icon" href="favicon/favicon.png" sizes="16x16 32x32" type="image/png">
+<link rel="stylesheet" href="CSS/RUBY PRODUCTION.css">
+<link rel="stylesheet" href="dark mode/dark-mode.css">
+<link rel="icon" href="favicon/ruby (1).png" type="image/x-icon">
+<link rel="stylesheet" href="mdb/css/global.min.css">
+<link rel="stylesheet" href="CSS/Timestamps.css">
+<link rel="stylesheet" href="mdb/css/mdb.min.css">
+<link rel="stylesheet" href="mdb/css/style.css">
+<link rel="stylesheet" href="css/room.css">
+<link rel="stylesheet" href="design/css/mdb.min.css">
+<link href="rubyproducti9n pro/css/bootstrap.min.css" rel="stylesheet">
+<link href="rubyproducti9n pro/css/mdb.min.css" rel="stylesheet">
+<link rel="stylesheet" href="../js/dark-mode.css">
+<link rel="stylesheet" href="design/css/mdb.min.css">
+<script src="JS/time ago.js" type="text/javascript"></script>
+<script src="timeago/jquery.timeago.js" type="text/javascript"></script>
+<script src="timeago/jquery.min.js" type="text/javascript"></script>
+<script src="test/test_helpers.js" type="text/javascript"></script>
+<script src="jquery.timeago.js" type="text/javascript"></script>
+<script src="timeago/jquery.timeago.js" type="text/javascript"></script>
+<script src="timeago/test/test_helpers.js" type="text/javascript"></script>
+<link rel="icon" href="favicon/favicon.png" sizes="16x16 32x32" type="image/png">
+<link rel="stylesheet" href="CSS/RUBY PRODUCTION.css"> -->
